[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://buttons/menu/persian/playvsai.jpg" type="Texture" id=2]
[ext_resource path="res://SCRIPTBL.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://sounds/ILost-Soundtrack1.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0.639216, 0.137255, 0.137255, 1 )
font_data = ExtResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayVsAi" type="TouchScreenButton" parent="."]
position = Vector2( 0, 120 )
scale = Vector2( 1.56122, 1.82143 )
normal = ExtResource( 2 )

[node name="HighScore" type="Label" parent="PlayVsAi"]
margin_top = -70.0
margin_right = 384.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 2

[node name="PlayViaBluetooth" type="TouchScreenButton" parent="PlayVsAi"]
position = Vector2( 0, 61.4901 )
normal = ExtResource( 2 )

[node name="PlayOnline" type="TouchScreenButton" parent="PlayVsAi"]
position = Vector2( 0, 122.98 )
normal = ExtResource( 2 )

[node name="Leaderboard" type="TouchScreenButton" parent="PlayVsAi"]
position = Vector2( 0, 184.47 )
normal = ExtResource( 2 )

[node name="Achievements" type="TouchScreenButton" parent="PlayVsAi"]
position = Vector2( 0, 245.961 )
normal = ExtResource( 2 )

[node name="Amstudyo" type="TouchScreenButton" parent="PlayVsAi"]
position = Vector2( 0, 307.451 )
normal = ExtResource( 2 )

[node name="Quit" type="TouchScreenButton" parent="PlayVsAi"]
position = Vector2( 0, 368.941 )
normal = ExtResource( 2 )

[node name="SoundTrackPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="PlayVsAi" to="." method="_on_PlayVsAi_pressed"]
[connection signal="pressed" from="PlayVsAi/Amstudyo" to="." method="_on_Amstudyo_pressed"]
[connection signal="pressed" from="PlayVsAi/Quit" to="." method="_on_Quit_pressed"]
